Create UserService UnitTests