@@ -73,6 +73,7 @@
                 <version>3.2.5</version>
                 <configuration>
                     <useModulePath>false</useModulePath>
+                    <argLine>-Dnet.bytebuddy.experimental=true</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -89,6 +90,7 @@
                             <includes>
                                 <include>**/*IT.java</include>
                             </includes>
+                            <argLine>-Dnet.bytebuddy.experimental=true</argLine>
                         </configuration>
                     </execution>
                 </executions>
